fix covers

--- a/src/popup/modules/main/components/Dashboard/Dashboard.module.scss
+++ b/src/popup/modules/main/components/Dashboard/Dashboard.module.scss
@@ -4,21 +4,27 @@
     min-height: 100%;
     background-size: 100%;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center 0;
 }
 
 
 .account-custom {
-    background: url(@app/popup/assets/img/account/custom.png) center 0 no-repeat;
+    background-image: url(@app/popup/assets/img/account/custom.png);
 }
 
 .account-venom {
-    background: url(@app/popup/assets/img/account/venom.png) center 0 no-repeat;
+    background-image: url(@app/popup/assets/img/account/venom.png);
 }
 
 .account-everscale {
-    background: url(@app/popup/assets/img/account/everscale.png) center 0 no-repeat;
+    background-image: url(@app/popup/assets/img/account/everscale.png);
 }
 
 .account-tycho {
-    background: url(@app/popup/assets/img/account/tycho.png) center 0 no-repeat;
+    background-image: url(@app/popup/assets/img/account/tycho.png);
+}
+
+.account-ton {
+    background-image: url(@app/popup/assets/img/account/ton.png);
 }
